--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jw-vue-pagination": "^1.0.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.15",
+    "vuejs-paginate": "^2.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
